# ailab-datastore

./: .coverage  .gitignore  LICENSE  README.md  SeedIdGuide-report-and-question.md  X.yaml  analysis-formatted.json  child-picture-template.json  custom_exceptions.py  db-creation.py  fertiscan_pyproject.toml  file-validator.py  index-mockData.yaml  index-template-system.json  index-template.yaml  index.yaml  metadata-doc.md  metadata-importation-doc.md  ml-import.py  nachet_pyproject.toml  picture-mockData.yaml  picture-template-system.json  picture-template.yaml  picture.yaml  purge-azure-storage.py  pyproject.toml  pyproject_Nachet.toml  pyproject_fertiscan.toml  requierements.txt  requirements.txt  session-mockData.yaml  session-template.yaml  session.yaml  test.py  test_db.py  test_mass_import.py  test_metadata.py  test_upload_picture_set.py
.github/: CODEOWNERS
.github/workflows/: CODEOWNERS  bytebase-sql-review.yml  main.yml  project-issus-status.yml  publish-package.yml  workflows.yml
BinTest/: BinTest_mass_import.py  BinTest_upload_picture_set.py
datastore/: __init__.py  requirements.txt
datastore/FertiScan/: __init__.py
datastore/Nachet/: __init__.py
datastore/blob/: __init__.py  azure_storage_api.py
datastore/blob/azure_storage_api/: __init__.py
datastore/db/: __init__.py
datastore/db/bytebase/: Add-Pipeline-Default##fsdh##0.0.9##ddl.sql  Create-Inference##fsdh##0.0.8##ddl.sql  delete-on-cascade.sql  nachet-010-inference.sql  nachet-schema##fsdh##0.0.7##ddl.sql  nachet-schema##fsdh##0.0.7.0##ddl.sql  nachet-schema##fsdh##0.0.7.1##ddl.sql  nachet-schema##fsdh##0.0.7.2##ddl.sql  nachet-schema##fsdh##0.0.7.3##ddl.sql  nachet-schema##fsdh##0.0.7.5##ddl.sql  nachet-schema##fsdh##005-schema##ddl.sql  nachet-schema##fsdh##05##ddl.sql  nachet-schema##fsdh##20240402195530##ddl.sql  nachet-schema##fsdh##20240402195530-ddl##ddl.sql  nachet-schema##fsdh##bytebase_0.0.6##ddl.sql  nachet-schema##fsdh##nachet_0.0.5##ddl.sql  nachet-schema##fsdh##nachet_0.0.6##ddl.sql  nachet-schema-005##fsdh##20240402195530##ddl.sql  nachet-tables##fsdh##0.0.5##ddl.sql  nachet-tables##fsdh##0.0.6##ddl.sql  nachet-tables##fsdh##005##ddl.sql  nachet-tables##fsdh##20240402195530##ddl.sql  nachet-tables##fsdh##20240402195530-ddl##ddl.sql  pipeline-default-rework##fsdh##0.0.10##ddl.sql  populating-script##fsdh##0.0.10.population##ddl.sql  schema_nachet_0.0.11.sql  trigger_inference_verification.sql  trigger_insert_picture_set_default_name.sql
datastore/doc/: Access-policies.md  bytebase-doc.md  datastore.md  metadata-doc.md  module-doc.md
datastore/fertiscan/: __init__.py
datastore/nachet/: __init__.py
datastore/tests/: test_azure_storage.py  test_blob.py  test_metadata.py  test_utils.py
db/: __init__.py  test.py
db/entities/: index.py  picture.py  user.py
db/queries/: __init__.py  queries.py
db/setup/: db-creation.py  db-mock-seeds-population.py  deployment-mass-import.py  storage-download.py
db/validator/: __init__.py  validator.py
deployment-mass-import/: deployment-mass-import.py
doc/: bytebase-doc.md  datastore.md  deployment-mass-import.md  fertiScan-architecture.md  inference-feedback.md  inference-results.md  metadata-doc.md  nachet-architecture.md  nachet-manage-folders.md  test.md  trusted-user-upload.md
doc/FertiScan/: fertiScan-architecture.md  update-inspection-sequence.md
doc/fertiscan/: delete-inspection.md  fertiScan-architecture.md  get-inspection.md  inspection-view.md  new-inspection.md  update-inspection-sequence.md
doc/nachet/: deployment-mass-import.md
fertiscan/: .env.template  README.md  __init__.py  inspection_export.json  requirements.txt
fertiscan/doc/: delete-inspection.md  fertiScan-architecture.md  inspection-view.md  new-inspection.md  search-inspection.md  update-inspection-sequence.md
fertiscan/tests/: analyse.json  test_datastore.py
metadata/picture/: __init__.py
metadata/picture_set/: __init__.py
metadata/validator/: __init__.py
nachet/: .env.template  README.md  __init__.py  requirements.txt
nachet/tests/: inference_feedback_perfect.json  inference_result.json
nachetDb-1.0.0/: db-creation.py  db-mock-seeds-population.py  db-queries.py  deployment-mass-import.py  storage-download.py
tests/: BinTest_mass_import.py  analyse.json  inference_example.json  inference_result.json  ml_structure_exemple.json  test_azure_storage.py  test_blob.py  test_datastore.py  test_db.py  test_mass_import.py  test_metadata.py  test_upload_picture_set.py
tests/FertiScan/: analyse.json  analyse_formtted.json  analysis_formatted.json  analysis_returned.json  test_datastore.py  test_db_label.py  test_db_metric.py  test_db_nutrients.py  test_db_sub_label.py
tests/Nachet/: test_datastore.py
tests/fertiscan/: analyse.json  analysis_returned.json  inspection.json  inspection_export.json  test_datastore.py  test_fertiscan.py
tests/nachet/: inference_result.json  ml_structure_exemple.json  test_datastore.py  test_utils.py
update_inspection/: test_upsert_label_info.py
(+289 files in other folders)
