[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nachet_datastore"
version = "0.1.0"
authors = [
  { name="Francois Werbrouck", email="francois.werbrouck@inspection.gc.ca" },
  { name="Sylvanie You", email="Sylvanie.You@inspection.gc.ca"}
]
description = "Data management python layer"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


license = { file = "LICENSE" }  

keywords = ["Nachet","ailab"]

[tool.setuptools]
packages = [
    "datastore", 
    "datastore.bin",
    "datastore.blob",
    "datastore.blob.azure_storage_api",
    "datastore.db", 
    "datastore.db.metadata", 
    "datastore.db.metadata.inference",
    "datastore.db.metadata.inspection", 
    "datastore.db.metadata.machine_learning",
    "datastore.db.metadata.picture",         
    "datastore.db.metadata.picture_set",     
    "datastore.db.metadata.template",        
    "datastore.db.metadata.validator",       
    "datastore.db.queries", 
    "datastore.db.queries.inference",
    "datastore.db.queries.ingredient",       
    "datastore.db.queries.inspection", 
    "datastore.db.queries.label",            
    "datastore.db.queries.machine_learning",
    "datastore.db.queries.metric",           
    "datastore.db.queries.nutrients",        
    "datastore.db.queries.organization",     
    "datastore.db.queries.picture",
    "datastore.db.queries.seed", 
    "datastore.db.queries.specification",    
    "datastore.db.queries.sub_label",        
    "datastore.db.queries.user",
    "datastore.fertiscan", 
    "datastore.nachet"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# [tool.setuptools.packages.find]
# where = ["ailab"]

[project.urls]
"Homepage" = "https://github.com/ai-cfia/ailab-datastore"
"Bug Tracker" = "https://github.com/ai-cfia/ailab-datastore/issues"
Repository = "https://github.com/ai-cfia/ailab-datastore"  
