[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fertiscan_datastore"
version = "1.0.12"
authors = [
  { name="Francois Werbrouck", email="francois.werbrouck@inspection.gc.ca" },
  { name="Kotchikpa Guy-Landry Allagbe" , email = "kotchikpaguy-landry.allagbe@inspection.gc.ca"}
]
description = "Data management python layer"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


license = { file = "LICENSE" }  

keywords = ["FertiScan","ailab"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fertiscan*", "datastore*"]

[tool.setuptools.dynamic]
dependencies = {file = ["./requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/ai-cfia/ailab-datastore/fertiscan"
"Bug Tracker" = "https://github.com/ai-cfia/ailab-datastore/issues"
Repository = "https://github.com/ai-cfia/ailab-datastore"
